--- a/styles/style.css
+++ b/styles/style.css
@@ -87,3 +87,118 @@
 .footer {
 
 }
+
+
+/* orderservice */
+.orderservice-container {
+    font-family: 'PT Sans', sans-serif;
+    width: 500px;
+    height: 750px;
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, .5);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+
+.header-text {
+    text-align: center;
+    color: black;
+    font-size: 36px;
+    font-weight: bold;
+    padding-top: 4%;
+}
+
+.entry-field {
+    display: flex;
+    flex-direction: column;
+    padding-top: 5%;
+    padding-left: 8%;
+    align-items: flex-start;
+
+}
+
+.field {
+    background-color: white;
+    width: 400px;
+    height: 50px;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, .4);
+    padding-left: 4%;
+    margin-top: 6%;
+    outline: none;
+}
+
+.type-of-ownership {
+    font-size: 20px;
+    font-weight: regular;
+    padding-top: 6%;
+}
+
+.number-of-employees {
+    font-size: 20px;
+    font-weight: regular;
+    padding-top: 6%;
+}
+
+input[type='radio'],
+label {
+  cursor: pointer;
+}
+
+input[type='radio'] {
+  position: relative;
+  height: 15px;
+  width: 15px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+}
+
+input[type='radio']::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1.5px solid black;
+}
+
+input[type='radio']:checked::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: black;
+  transform: translate(-50%, -50%);
+  visibility: visible;
+}
+ 
+.submit-button {
+    border: 0;
+    background-color: rgba(222, 16, 16, .65);
+    color: white;
+    border-radius: 10px;
+    width: 400px;
+    height: 50px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.submit-an-application{
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
+}
