--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,11 @@
 
 .test {
     width: 960px;
-    height: 3000px;
+    height: 300px;
     border: 1px solid black;
     border-radius: 10px;
     margin: 10px auto 10px auto;
-    background-color: rgb(255, 222, 65);
+    background-color: yellow;
 }
 
 /* text */
@@ -48,12 +48,12 @@
     margin-left: 8px;
 }
 
-.logo-container-img-1c {
+.img-1c {
     height: 105px;
     margin-right: 10px;
 }
 
-.logo-container-img-1c-top {
+.img-1c-top {
     height: 70px;
     margin-right: 5px;
 }
@@ -70,7 +70,7 @@
     margin-bottom: auto;
 }
 
-.logo-container-img-algoritm {
+.img-algoritm {
     width: 131px;
     height: 41px;
     margin-right: 50px;
@@ -242,7 +242,7 @@ input[type='radio']:checked::after {
         padding-bottom: 5px;
     }
 
-    .logo-container-img-1c {
+    .img-1c {
         height: 70px;
         margin-right: 5px;
     }
@@ -284,7 +284,7 @@ input[type='radio']:checked::after {
     
 }
 
-@media screen and (min-width: 338px) and (max-width: 469px){
+@media screen and (min-width: 338px) and (max-width: 467px){
 
     .logo-container {
         display: none;
@@ -300,7 +300,7 @@ input[type='radio']:checked::after {
         padding-bottom: 5px;
     }
 
-    .logo-container-img-1c {
+    .img-1c {
         height: 70px;
         margin-right: 7px;
     }
@@ -309,7 +309,7 @@ input[type='radio']:checked::after {
         height: 37px;
     }
 
-    .logo-container-img-algoritm {
+    .img-algoritm {
         width: 81.9px;
         height: 25.6px;
         padding-left: 8px;
@@ -348,7 +348,7 @@ input[type='radio']:checked::after {
     }
 }
 
-@media screen and (min-width: 470px) and (max-width: 665px){
+@media screen and (min-width: 468px) and (max-width: 665px){
 
     .algotitm-logo {
         display: none;
