--- a/styles/style.css
+++ b/styles/style.css
@@ -3,15 +3,6 @@
     font: 16px 'PTSans-Regular', sans-serif;
 }
 
-.test {
-    width: 960px;
-    height: 300px;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin: 10px auto 10px auto;
-    background-color: yellow;
-}
-
 /* text */
 
 .mrgn10 {
@@ -33,14 +24,42 @@
     color: black;
 }
 
+.ulh .lih {
+    display: inline-block;
+    position: relative;
+    margin-right: 15px; 
+    box-sizing: border-box;
+}
+
+.center-text {
+    text-align: center;
+}
+
+h1 {
+    font-size: 96px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.header20 {
+    font-size: 20px;
+}
 /* Header */
 
 .header {
+    position:relative;
     height: 105px;
     box-shadow: 0.01px 3px 10px rgba(0,0,0,0.3);
     display: flex;
     justify-content: center;
     background-color: rgb(255, 222, 65);
+    z-index: 999;
 }
 
 .logo-container {
@@ -104,13 +123,80 @@
     flex-direction: column;
 }
 
+.main-content-wrapper {
+    width: 960px;
+    height: 300px;
+    /* border: 1px solid black; */
+    border-radius: 10px;
+    margin: 10px auto 10px auto;
+    /* background-color: yellow; */
+}
+
+
+/* Start block */
+
+
+.bgimage {
+    width: 100%;
+    height: 840px;
+}
+
+.bgimage {
+    background: url(../img/content-intro-bg2.jpg) no-repeat center center;
+}
+
+.btn {
+    width: 215px;
+    height: 70px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.25);
+    border-radius: 7px;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+.circle {
+    width: 4px;
+    height: 4px;
+    border-radius: 100%;
+    color: rgb(113, 95, 0);
+}
+
+/* our-service */
+
+
+.Our-ervices-header {
+    text-align: center;
+}
+
+.Our-ervices-list {
+    padding-right: 24px;
+    width: 952px;
+    
+}
+
+.about-li {
+    padding-top: 15px;
+}
+
+
 /* footer */
+
 
 .footer {
 
 }
 
+
 /* orderservice */
+
+
 .screen-display {
     display: flex;
     justify-content: center;
@@ -377,7 +463,7 @@ input[type='radio']:checked::after {
 }
 
 @media screen and (max-width: 980px){
-    .test {
+    .main-content-wrapper {
         width: 98%;
     }
 }
