--- a/styles/style.css
+++ b/styles/style.css
@@ -624,6 +624,7 @@ input[type='radio']:checked::after {
     border-radius: 10px 10px 0 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
     padding-top: 10px;
+    padding-bottom: 10px;
 }
   
 .modal-body {padding: 2px 16px;}
