--- a/styles/style.css
+++ b/styles/style.css
@@ -195,6 +195,43 @@ h2 {
 
 /* How It Actually works*/
 
+.tariff_btn {
+    width: 600px;
+    margin: 10px auto 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.ip {
+    width: 49%;
+    border: solid black;
+    border-width: 1px 1px 0 1px;
+    border-radius: 7px 7px 0 0;
+    background-color: #ffde41;
+}
+
+.ip:hover {
+    cursor: pointer;
+}
+
+.ooo {
+    width: 49%;
+    border: solid black;
+    border-width: 1px 1px 0 1px;
+    border-radius: 7px 7px 0 0;
+    background-color: white;
+}
+
+.ooo:hover {
+    cursor: pointer;
+}
+
+.borderh {
+    border: solid rgba(0, 0, 0, 0.2);
+    border-width: 0px 1px 1px 1px;
+    padding-bottom: 20px;
+}
+
 .howitwork {
     text-align: center;
 }
