--- a/styles/style.css
+++ b/styles/style.css
@@ -206,6 +206,7 @@ h2 {
 
 /* warranty */
 
+
 .warranty {
     text-align: center;
 }
@@ -252,14 +253,49 @@ h2 {
     margin: 20px 0 13px 0;
 }
 
+/* bloknot */
+
+
+.bloknot {
+    background: url(../img/fr-lines-x.png) repeat-x left top;
+    height: 72px;
+    width:  920px;
+    box-sizing: border-box;
+    outline: none;
+    position: relative;
+    bottom: -40px;
+    margin: 0 auto;
+}
+
 
 /* tariffs */
 
 
+.tariffs {
+    background-color: #ffde41;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 0 30px 40px -20px rgba(0,0,0, .3);
+}
+
+.tarriff-border{
+    width: 97.5%;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-width: 1px 1px 1px 1px;
+    margin: 0 auto;
+    border-radius: 7px;
+}
+
 .tariffs-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin-top: 20px;
+    padding-bottom: 30px;
+}
+
+.pdng {
+    padding-top: 30px;
 }
 
 .tariffs-blocks-header {
@@ -319,6 +355,17 @@ h2 {
 .tariffs-blocks-price {
     font-size: 20px;
     text-align: center;
+}
+
+/* yellow bg */
+
+.yellow-bg {
+    background-color: #ffde41;
+    width: 100%;
+    height: 2000px;
+    position: absolute;
+    z-index: -1;
+    top: 2200px;    
 }
 
 /* express audit */
@@ -381,6 +428,7 @@ h2 {
 
 /* about our company */
 
+
 .about-our-company-container {
     display: flex;
     margin-top: 50px;
@@ -440,7 +488,29 @@ h2 {
 
 
 .footer {
+    width: 960px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-width: 1px 0 0 0;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 
+.first-column {
+    width: 60%;
+}
+
+.second-column {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+.foter-big-header {
+    font-size: 32px;
+    margin: 20px 0 20px 60px;
+    font-weight: bold;
 }
 
 
@@ -672,6 +742,7 @@ input[type='radio']:checked::after {
     border: solid rgba(0, 0, 0, 0.2);
     border-width: 0px 1px 1px 1px;
     padding-bottom: 20px;
+    border-radius: 0 0 10px 10px
 }
 
 .tariff_name {
