--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar {
     color: rgb(113, 95, 0);
 }
 
-.bold{
+.bold {
     font-weight: bold;
 }
 
@@ -40,7 +40,7 @@ body::-webkit-scrollbar {
 .ulh .lih {
     display: inline-block;
     position: relative;
-    margin-right: 15px; 
+    margin-right: 15px;
     box-sizing: border-box;
 }
 
@@ -70,12 +70,13 @@ h2 {
     font-size: 20px;
     margin: 30px 0 37px 0;
 }
+
 /* Header */
 
 .header {
-    position:relative;
+    position: relative;
     height: 105px;
-    box-shadow: 0.01px 3px 10px rgba(0,0,0,0.3);
+    box-shadow: 0.01px 3px 10px rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: center;
     background-color: rgb(255, 222, 65);
@@ -97,7 +98,7 @@ h2 {
     margin-right: 5px;
 }
 
-.info-container-top-logo-container{
+.info-container-top-logo-container {
     display: flex;
     margin-left: 8px;
 }
@@ -134,6 +135,93 @@ h2 {
 .info-container-bot {
     height: 52.5px;
     padding-top: 15px;
+}
+
+
+/* Anchors */
+
+.right-anchors-container {
+    position: fixed;
+    top: 40%;
+    left: 94%;
+}
+
+.right-anchors-container>ul>li>div>a {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background-color: black;
+    border-radius: 50%;
+}
+
+.right-anchors-container>ul>li>div>a:hover {
+    cursor: pointer;
+}
+
+.active-anchor {
+    opacity: 1;
+}
+
+.right-anchors-container>ul>li {
+    list-style-type: none;
+    margin-bottom: 10px;
+}
+
+.block-anchor {
+    position: relative;
+}
+
+.hidden {
+    display: none;
+    position: absolute;
+    bottom: -2px;
+    left: -80px;
+    width: 57px;
+    background-color: black;
+    border-radius: 3px;
+    color: white;
+    padding: 5px;
+    text-align: center;
+    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .16);
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .16);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .16);
+    font-size: 12px;
+}
+
+.hover+.hidden:before {
+    content: " ";
+    position: absolute;
+    top: 21%;
+    left: 107%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    height: 0;
+    width: 0;
+    border: 7px solid transparent;
+    border-right: 7px solid #fff;
+    border-color: transparent transparent transparent black;
+    z-index: 2;
+}
+
+.hover+.hidden:after {
+    content: " ";
+    position: absolute;
+    top: 21%;
+    left: 107%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    height: 0;
+    width: 0;
+    border: 7px solid transparent;
+    border-right: 7px solid #fff;
+    border-color: transparent transparent transparent rgba(0, 0, 0, .16);
+    z-index: 1;
+}
+
+.hover:hover+.hidden {
+    display: block;
 }
 
 /* Main content */
@@ -259,7 +347,7 @@ h2 {
 .bloknot {
     background: url(../img/fr-lines-x.png) repeat-x left top;
     height: 72px;
-    width:  920px;
+    width: 920px;
     box-sizing: border-box;
     outline: none;
     position: relative;
@@ -276,10 +364,10 @@ h2 {
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 10px;
-    box-shadow: 0 30px 40px -20px rgba(0,0,0, .3);
+    box-shadow: 0 30px 40px -20px rgba(0, 0, 0, .3);
 }
 
-.tarriff-border{
+.tarriff-border {
     width: 97.5%;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-width: 1px 1px 1px 1px;
@@ -315,7 +403,7 @@ h2 {
     margin: 20px auto 0 auto;
     height: 135px;
     margin-bottom: 50px;
-    
+
 }
 
 .three {
@@ -365,7 +453,7 @@ h2 {
     height: 2000px;
     position: absolute;
     z-index: -1;
-    top: 2200px;    
+    top: 2200px;
 }
 
 /* express audit */
@@ -377,7 +465,7 @@ h2 {
     margin-top: 50px;
 }
 
-.express-audit-text-container{
+.express-audit-text-container {
     padding-right: 98px;
 }
 
@@ -572,45 +660,45 @@ h2 {
 
 input[type='radio'],
 label {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 input[type='radio'] {
-  position: relative;
-  height: 15px;
-  width: 15px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  outline: none;
+    position: relative;
+    height: 15px;
+    width: 15px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
 }
 
 input[type='radio']::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  border: 1.5px solid black;
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1.5px solid black;
 }
 
 input[type='radio']:checked::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: black;
-  transform: translate(-50%, -50%);
-  visibility: visible;
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: black;
+    transform: translate(-50%, -50%);
+    visibility: visible;
 }
- 
+
 .submit-button {
     border: 0;
     background-color: rgba(222, 16, 16, .65);
@@ -623,7 +711,7 @@ input[type='radio']:checked::after {
     margin-bottom: 35px;
 }
 
-.submit-an-application{
+.submit-an-application {
     display: flex;
     justify-content: center;
     margin-top: 10%;
@@ -634,20 +722,29 @@ input[type='radio']:checked::after {
 
 
 .modal {
-    display: none; /* Скрыто по умолчанию */
-    position: fixed; /* Оставаться на месте */
-    z-index: 1; /* Сидеть на вершине */
-    padding-top: 70px; /* Расположение коробки */
+    display: none;
+    /* Скрыто по умолчанию */
+    position: fixed;
+    /* Оставаться на месте */
+    z-index: 1;
+    /* Сидеть на вершине */
+    padding-top: 70px;
+    /* Расположение коробки */
     left: 0;
     top: 0;
-    width: 100%; /* Полная ширина */
-    height: 100%; /* Полная высота */
-    overflow: auto; /* Включите прокрутку, если это необходимо */
-    background-color: rgb(0,0,0); /* Цвет запасной вариант  */
-    background-color: rgba(0,0,0,0.4); /*Черный с непрозрачностью */
-  }
-  
-  /* Модальное содержание */
+    width: 100%;
+    /* Полная ширина */
+    height: 100%;
+    /* Полная высота */
+    overflow: auto;
+    /* Включите прокрутку, если это необходимо */
+    background-color: rgb(0, 0, 0);
+    /* Цвет запасной вариант  */
+    background-color: rgba(0, 0, 0, 0.4);
+    /*Черный с непрозрачностью */
+}
+
+/* Модальное содержание */
 .modal-content {
     border-radius: 10px;
     position: relative;
@@ -665,13 +762,27 @@ input[type='radio']:checked::after {
 
 /* Добавить анимацию */
 @-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
 }
 
 @keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
 }
 
 /* Кнопка закрытия */
@@ -698,9 +809,11 @@ input[type='radio']:checked::after {
     padding-bottom: 10px;
     padding: 10px 16px;
 }
-  
-.modal-body {padding: 2px 16px;}
-  
+
+.modal-body {
+    padding: 2px 16px;
+}
+
 .modal-footer {
     border-radius: 0 0 10px 10px;
     padding: 2px 16px;
@@ -792,7 +905,7 @@ th {
 /*  Медиатеги   */
 
 
-@media screen and (min-width: 250px) and (max-width: 337px){
+@media screen and (min-width: 250px) and (max-width: 337px) {
 
     h1 {
         font-size: 32px;
@@ -833,6 +946,7 @@ th {
         width: 50px;
         height: 50px;
     }
+
     .logo-container {
         display: none;
     }
@@ -857,7 +971,7 @@ th {
         display: none;
     }
 
-    .info-container-top-text{
+    .info-container-top-text {
         display: flex;
         flex-direction: column;
         text-align: right;
@@ -879,7 +993,7 @@ th {
         padding: 7px 3px 0 3px;
         height: 23px;
     }
-    
+
     .header {
         height: 92px;
     }
@@ -887,10 +1001,10 @@ th {
     .info-container-top-logo-container {
         margin-left: 0;
     }
-    
+
 }
 
-@media screen and (min-width: 338px) and (max-width: 467px){
+@media screen and (min-width: 338px) and (max-width: 467px) {
 
     .logo-container {
         display: none;
@@ -922,7 +1036,7 @@ th {
         margin-right: 2px;
     }
 
-    .info-container-top-text{
+    .info-container-top-text {
         display: flex;
         flex-direction: column;
         text-align: right;
@@ -944,17 +1058,17 @@ th {
         padding: 7px 3px 0 3px;
         height: 23px;
     }
-    
+
     .header {
         height: 92px;
     }
-    
+
     .info-container-top-logo-container {
         margin-left: 0;
     }
 }
 
-@media screen and (min-width: 468px) and (max-width: 665px){
+@media screen and (min-width: 468px) and (max-width: 665px) {
 
     .algotitm-logo {
         display: none;
@@ -964,25 +1078,25 @@ th {
         display: none;
     }
 
-    .info-container-top-text{
+    .info-container-top-text {
         display: flex;
         flex-direction: row;
     }
 
 }
 
-@media screen and (min-width: 666px){
+@media screen and (min-width: 666px) {
     .info-container-top-logo-container {
         display: none;
     }
 
-    .info-container-top-text{
+    .info-container-top-text {
         display: flex;
         flex-direction: row;
     }
 }
 
-@media screen and (max-width: 980px){
+@media screen and (max-width: 980px) {
     .main-content-wrapper {
         width: 98%;
     }
