--- a/styles/style.css
+++ b/styles/style.css
@@ -345,45 +345,174 @@ h2 {
 
 
 .bloknot {
-    background: url(../img/fr-lines-x.png) repeat-x left top;
+    background: url(../img/fr-lines-x-2.png) repeat-x left top;
     height: 72px;
     width: 920px;
     box-sizing: border-box;
     outline: none;
     position: relative;
-    bottom: -40px;
+    bottom: -458px;
     margin: 0 auto;
+    z-index: 1;
+}
+
+/* benefits */
+
+.benefits {
+    background-color: #ffde41;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px 10px 0 0;
+    box-shadow: 0 30px 40px -20px rgba(0, 0, 0, .3);
+    margin-bottom: 15px;
+}
+
+.benefits-border {
+    width: 97.5%;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-width: 1px 1px 0 1px;
+    margin: 0 auto;
+    border-radius: 7px 7px 0 0;
+}
+
+.benefits-container {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 100px;
+}
+
+.benefits-column-first {
+    display: flex;
+    flex-direction: column;
+}
+
+.benefits-column-second {
+    display: flex;
+    flex-direction: column;
+}
+
+.risk-reduction {
+    display: flex;
+    align-items: center;
+}
+
+.risk-img {
+    width: 64px;
+    height: 64px;
+}
+
+.benefits-text-p {
+    font-size: 24px;
+    line-height: 140%;
+    width: 300px;
+}
+
+.benefits-img {
+    margin-right: 4%;
+}
+
+.mobile-app {
+    margin-top: 2%;
+    display: flex;
+    align-items: center;
+}
+
+.mobile-img {
+    width: 64px;
+    height: 64px;
+}
+
+.time-saving {
+    margin-top: 2%;
+    display: flex;
+    align-items: center;
+}
+
+.time-img {
+    width: 64px;
+    height: 64px;
+}
+
+.support {
+    display: flex;
+    align-items: center;
+}
+
+.h-img {
+    height: 58px;
+    width: 58px;
+}
+
+.quality {
+    margin-top: 2%;
+    display: flex;
+    align-items: center;
+}
+
+.quality-img {
+    height: 64px;
+    width: 64px;
+}
+
+.promotion {
+    margin-top: 2%;
+    display: flex;
+    align-items: center;
+}
+
+.shield-img {
+    height: 60px;
+    width: 60px;
+}
+
+
+/*///////////////////////*/
+
+
+.main-yellow-bg {
+    background-color: #ffde41;
+    margin-top: 110px;
 }
 
 
 /* tariffs */
 
+.pos {
+    position: relative;
+    top: -127px;
+} 
 
 .tariffs {
-    background-color: #ffde41;
+    background-color: white;
     padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
     box-shadow: 0 30px 40px -20px rgba(0, 0, 0, .3);
+    outline: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .tarriff-border {
     width: 97.5%;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-width: 1px 1px 1px 1px;
     margin: 0 auto;
     border-radius: 7px;
+}
+
+.yellow-arrow {
+    display: block;
+    width: 100%;
+    height: 46px;
+    background: url("../img/fr-our-client-block-arrow.png") no-repeat center center;
 }
 
 .tariffs-container {
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
     padding-bottom: 30px;
+    padding-top: 30px;
+    background-color: #ffde41;
 }
 
 .pdng {
-    padding-top: 30px;
+    padding-top: 60px;
 }
 
 .tariffs-blocks-header {
@@ -463,6 +592,9 @@ h2 {
     display: flex;
     justify-content: space-evenly;
     margin-top: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-width: 1px 1px 0 1px;
+    padding: 30px 0 20px 0;
 }
 
 .express-audit-text-container {
@@ -520,6 +652,8 @@ h2 {
 .about-our-company-container {
     display: flex;
     margin-top: 50px;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .about-our-company-first {
@@ -535,20 +669,15 @@ h2 {
 .about-our-company-text {
     line-height: 140%;
     text-align: justify;
-    width: 433px;
-}
-
-.about-our-company-text-second {
-    line-height: 140%;
-    text-align: justify;
-    width: 433px;
-    padding-top: 30px;
+    width: 90%;
+    margin: auto;
 }
 
 .about-logo-container {
     display: flex;
-    margin-left: 8px;
     padding-top: 45px;
+    width: 90%;
+    margin: auto;
 }
 
 .about-img-1c {
@@ -1002,9 +1131,119 @@ th {
         margin-left: 0;
     }
 
+    /* express audit */
+
+    .express-audit-image {
+        display: none;
+    }
+
+    .express-audit-text-container{
+        padding-right: 0;
+    }
+    
+    .express-audit-text {
+        font-size: 16px;
+        text-align: center;
+        
+    }
+
+    .audit-order-button {
+        width: 150px;
+        height: 50px;
+    
+        background: #FFFFFF;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.25);
+        border-radius: 7px;
+        cursor: pointer;
+    }
+
+    .tst {
+        width: 75px;
+        height: 25px;
+        padding-left: 35%; 
+        padding-bottom: 4%;
+    }
+
+    .express-audit-description {
+        font-size: 6px;
+        line-height: 140%;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.75);
+        padding-top: 15px;
+    }
+
+    /* benefits */
+
+    .benefits-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 10px;
+    }
+
+    .benefits-text-p {
+        font-size: 16px;
+        line-height: 140%;
+        width: 160px;
+    }
+
+    .benefits-img {
+        margin-right: 4%;
+    }
+
+    .bn-top {
+        margin-top: 4%;
+    }
+
+    .benefits-column-second {
+        display: flex;
+        flex-direction: column;
+        margin-top: 4%;
+    }
+
+    .risk-img {
+        width: 54px;
+        height: 54px;
+    }
+
+    .mobile-img {
+        width: 54px;
+        height: 54px;
+    }
+
+    .time-img {
+        width: 54px;
+        height: 54px;
+    }
+
+    .h-img {
+        width: 48px;
+        height: 48px;
+    }
+
+    .quality-img {
+        width: 54px;
+        height: 54px;
+    }
+
+    .shield-img {
+        width: 50px;
+        height: 50px;
+    }
+
 }
 
 @media screen and (min-width: 338px) and (max-width: 467px) {
+
+    .block-container {
+        flex-direction: column;
+        margin-left: auto;
+        width: fit-content;
+    }
+
+    .block {
+        margin-top: 10%;
+    }
 
     .logo-container {
         display: none;
@@ -1066,9 +1305,93 @@ th {
     .info-container-top-logo-container {
         margin-left: 0;
     }
+
+    /* express audit */
+
+    .express-audit-image {
+        display: none;
+    }
+
+    .express-audit-text-container{
+        padding-right: 0;
+    }
+    
+    .express-audit-text {
+        font-size: 20px;
+        text-align: center; 
+    }
+
+    .audit-order-button {
+        width: 150px;
+        height: 50px;
+    
+        background: #FFFFFF;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.25);
+        border-radius: 7px;
+        cursor: pointer;
+    }
+
+    .tst {
+        width: 75px;
+        height: 25px;
+        padding-left: 20%; 
+        padding-bottom: 4%;
+    }
+
+    .express-audit-description {
+        font-size: 12px;
+        line-height: 140%;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.75);
+        padding-top: 30px;
+    }
+
+    .express-audit-image-free {
+        padding-bottom: 2%;
+        padding-left: 35%;
+    }
+
+    /* benefits */
+
+    .benefits-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 10px;
+    }
+
+    .benefits-text-p {
+        font-size: 20px;
+        line-height: 140%;
+        width: 300px;
+    }
+
+    .benefits-img {
+        margin-right: 2%;
+    }
+
+    .bn-top {
+        margin-top: 4%;
+    }
+
+    .benefits-column-second {
+        display: flex;
+        flex-direction: column;
+        margin-top: 4%;
+    }
 }
 
 @media screen and (min-width: 468px) and (max-width: 665px) {
+
+    .block-container {
+        flex-direction: column;
+        margin-left: auto;
+        width: fit-content;
+    }
+
+    .block {
+        margin-top: 10%;
+    }
 
     .algotitm-logo {
         display: none;
@@ -1081,6 +1404,79 @@ th {
     .info-container-top-text {
         display: flex;
         flex-direction: row;
+    }
+
+    /* express audit */
+
+    .express-audit-image {
+        display: none;
+    }
+
+    .express-audit-text-container{
+        padding-right: 0;
+    }
+    
+    .express-audit-text {
+        font-size: 20px;
+        text-align: center; 
+    }
+
+    .audit-order-button {
+        width: 150px;
+        height: 50px;
+    
+        background: #FFFFFF;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.25);
+        border-radius: 7px;
+        cursor: pointer;
+    }
+
+    .tst {
+        width: 75px;
+        height: 25px;
+        padding-bottom: 4%;
+
+    }
+
+    .express-audit-description {
+        font-size: 12px;
+        line-height: 140%;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.75);
+        padding-top: 30px;
+    }
+
+    .express-audit-image-free {
+        padding-bottom: 2%;
+    }
+
+    /* benefits */
+
+    .benefits-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 20px;
+    }
+
+    .benefits-text-p {
+        font-size: 24px;
+        line-height: 140%;
+        width: 300px;
+    }
+
+    .benefits-img {
+        margin-right: 2%;
+    }
+
+    .bn-top {
+        margin-top: 4%;
+    }
+
+    .benefits-column-second {
+        display: flex;
+        flex-direction: column;
+        margin-top: 4%;
     }
 
 }
