--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@ body::-webkit-scrollbar {
     display: inline-block;
     position: relative;
     margin-right: 15px;
+    margin-bottom: 5px;
     box-sizing: border-box;
 }
 
@@ -52,7 +53,7 @@ h1 {
     font-size: 80px;
     text-transform: uppercase;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     margin-top: 60px;
 }
 
@@ -147,22 +148,28 @@ h2 {
     position: fixed;
     top: 40%;
     left: 94%;
+    z-index: 3;
 }
 
-.right-anchors-container>ul>li>div>a {
+.active {
+    background-color: black;
+    opacity: 1;
+}
+
+.unactive {
+    background-color: black;
+    opacity: 0.2;
+}
+
+.hover {
     display: inline-block;
     width: 12px;
     height: 12px;
-    background-color: black;
     border-radius: 50%;
 }
 
 .right-anchors-container>ul>li>div>a:hover {
     cursor: pointer;
-}
-
-.active-anchor {
-    opacity: 1;
 }
 
 .right-anchors-container>ul>li {
@@ -356,7 +363,7 @@ h2 {
     box-sizing: border-box;
     outline: none;
     position: relative;
-    bottom: -458px;
+    bottom: -483px;
     margin: 0 auto;
     z-index: 1;
 }
@@ -378,6 +385,7 @@ h2 {
     border-width: 1px 1px 0 1px;
     margin: 0 auto;
     border-radius: 7px 7px 0 0;
+    padding-top: 25px;
 }
 
 .benefits-container {
@@ -476,7 +484,7 @@ h2 {
 
 .main-yellow-bg {
     background-color: #ffde41;
-    margin-top: 110px;
+    margin-top: 1470px;
 }
 
 
@@ -484,7 +492,7 @@ h2 {
 
 .pos {
     position: relative;
-    top: -127px;
+    top: -1463px;
     height: 2050px;
 } 
 
@@ -968,13 +976,9 @@ input[type='radio']:checked::after {
 
 .modal {
     display: none;
-    /* Скрыто по умолчанию */
     position: fixed;
-    /* Оставаться на месте */
-    z-index: 1;
-    /* Сидеть на вершине */
+    z-index: 100;
     padding-top: 70px;
-    /* Расположение коробки */
     left: 0;
     top: 0;
     width: 100%;
