about our company adaptive fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1359,7 +1359,7 @@ th {
     }
 
     .pos {
-        height: auto;
+        height: 3000px;
     }
 
 }
@@ -1519,7 +1519,7 @@ th {
     }
 
     .pos {
-        height: auto;
+        height: 3500px;
     }
 }
 
@@ -1628,7 +1628,7 @@ th {
     }
 
     .pos {
-        height: auto;
+        height: 3000px;
     }
 
 }
